# lungCancerPredictionAPI

./: .gitignore  app.py  cma.py  predict.py  pyproject.toml  requirements.txt
