[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lungCancerPredict"
version = "2024.0.0"
dependencies = [
  "httpx",
  "gidgethub[httpx]>4.0.0",
  
]
requires-python = ">=3.8"
authors = [
  {name = "Phylis Korir", email = "phylis.korir@strathmore.edu"},
  {name = "David Nene", email = "david.nene@strathmore.edu"},
]
maintainers = [
  {name = "David Nene", email = "david.nene@strathmore.edu"}
]
description = "Lung cancer prediction with ResNet50"

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]



[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/davidnene/lungCancerPredictionAPI.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
